# vivo-codebuilder

./: .env.example  .gitignore  ARQUITETURA.md  CLAUDE.md  README.md  pyproject.toml
changelog/: 2026-06-26-planner-file-cap-force-split.md  2026-06-26-qa-deliverable-contract.md  2026-06-26-subtask-retry-and-failed-qa-archive.md
src/codebuilder/: feedback_provider.py  history.py  llm_config.py  main.py  runtime_qa.py  schemas.py
src/codebuilder/crews/planner_crew/: planner_crew.py
src/codebuilder/crews/planner_crew/config/: agents.yaml  tasks.yaml
src/codebuilder/crews/reviewer_crew/: __init__.py  reviewer_crew.py
src/codebuilder/crews/reviewer_crew/config/: agents.yaml  tasks.yaml
src/codebuilder/crews/writer_crew/: __init__.py  writer_crew.py
src/codebuilder/crews/writer_crew/config/: agents.yaml  tasks.yaml
src/codebuilder/knowledge/: onboarding-projeto-rpa.md  python_best_practices.md  review_checklist.md  rpa_patterns.md
src/codebuilder/skills/code-review-gate/: SKILL.md
src/codebuilder/skills/rpa/: SKILL.md
src/codebuilder/tools/: __init__.py  attachment_tool.py  git_tool.py  lint_runner_tool.py  project_env.py  s3_artifacts.py  workspace_tool.py
tests/: test_attachment_security.py  test_crewai_skills.py  test_env_consistency.py  test_modify_preservation.py  test_multifile_repair.py  test_patch_existing_fixes.py  test_planning_and_imports.py  test_project_env_qa.py  test_qa_scoping.py  test_revise_plan_recovery.py  test_runtime_qa.py  test_symbol_index.py  test_token_bounds.py  test_type_gate.py  test_type_gate_integration.py  test_vivo_fixes.py
