[project]
name = "codebuilder"
version = "0.1.0"
description = "codebuilder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2"
]

[project.scripts]
kickoff = "codebuilder.main:kickoff"
run_crew = "codebuilder.main:kickoff"
plot = "codebuilder.main:plot"
run_with_trigger = "codebuilder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
