[project]
name = "codebuilder"
version = "0.1.0"
description = "codebuilder using crewAI"
authors = [{ name = "Pedro Silva", email = "pedro.silva@crewai.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2",
    "requests>=2.31",
    "gitpython>=3.1",
    "pypdf>=4.0",
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
kickoff = "codebuilder.main:kickoff"
resume = "codebuilder.main:resume"
run_crew = "codebuilder.main:kickoff"
plot = "codebuilder.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebuilder"]

[tool.crewai]
type = "flow"
